docs: fix name of paper

--- a/paper/SRSq.tex
+++ b/paper/SRSq.tex
@@ -361,7 +361,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Augmented Reality by Hand Gesture Recognized Commands and Movements}
+\title{Sequential Recommender Systems Deep Graph Evaluation}
 %
 %
 % author names and IEEE memberships
@@ -373,8 +373,7 @@
 % was not built to handle multiple paragraphs
 %
 
-\author{MEHDI VALINEJAD,~\IEEEmembership{Student}.
-MOHAMMADYOUSEF SADRIALAMDARI,~\IEEEmembership{Student}% <-this % stops a space
+\author{MEHDI VALINEJAD,~\IEEEmembership{Student}% <-this % stops a space
 % \thanks{M. Shell was with the Department
 % of Electrical and Computer Engineering, Georgia Institute of Technology, Atlanta,
 % GA, 30332 USA e-mail: (see http://www.michaelshell.org/contact.html).}% <-this % stops a space
@@ -404,7 +403,7 @@ MOHAMMADYOUSEF SADRIALAMDARI,~\IEEEmembership{Student}% <-this % stops a space
 
 % The paper headers
 \markboth{Sequential Recommender Systems, VOL.~01, NO.~01, DECEMBER~2023}%
-{Shell \MakeLowercase{\textit{et al.}}: Augmented Reality by Hand Gesture Recognized Commands and Movements}
+{Shell \MakeLowercase{\textit{et al.}}: Sequential Recommender Systems Deep Graph Evaluation}
 % The only time the second header will appear is for the odd numbered pages
 % after the title page when using the twoside option.
 % 
