docs: add github repo and abstract

--- a/paper/SRSGNF.tex
+++ b/paper/SRSGNF.tex
@@ -435,7 +435,17 @@
 % As a general rule, do not put math, special symbols or citations
 % in the abstract or keywords.
 \begin{abstract}
-abstract goes here
+Recent advancements in sequential recommender systems (SRSs) aim to provide users with better, personalized 
+recommendations. While traditional models like collaborative filtering have been effective, SRSs focus on 
+understanding user behaviors over time. However, SRSs, especially those using Graph Convolutional Neural Networks (GCNNs), 
+face challenges such as complexity and inefficiency. This research compares traditional GCNNs with Graph Neighborhood 
+Filters (GNFs), specifically neighborhood graph filters (NGFs). NGFs address challenges in GCNNs by providing a stable 
+foundation using k-hop neighborhood adjacency matrices. The goal is to show the benefits of NGFs over traditional 
+filters in practical applications like graph signal denoising and node classification. The study explores existing 
+challenges in SRSs and contributes insights to improve recommendation systems. The research commits to evaluating NGFs' 
+denoising performance against current methods, aiming to demonstrate their superiority in accuracy, scalability, 
+and efficiency for sequential recommender systems. This is the GitHub repository for this report and implementation 
+https://github.com/TxCorpi0x/sequential-recommendation
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
